# MASLAB

./: CMakeLists.txt  MASLAB  Vision__  a.out  brain.py  camera.py  control.py  drunk_robot.py  gyro_and_encoder_read.py  hello_world_blink.py  map_processing.py  new_brain.py  pid_robot.py  point_to_point.py  random_movement.py  run_forwards.py  state_machine.py  wall_follower.py
Vision/: main.cpp
driver/: IR_net_read.py  conveyor_write.py  sort_blocks.py  sort_blocks_with_conveyor.py
tests/: test_blink.py  test_encoder_read.py  test_gyro_read.py  test_ir.py  test_run_fowards.py
